add display and retrieve properties

--- a/popup.html
+++ b/popup.html
@@ -51,30 +51,6 @@
     </header>
     <section>
       <div id="keyList" class="flex-col">
-        <div class="flex-row justify-between align-center full-width">
-          <div class="flex-row align-center">
-            <img
-              src="/images/icon-package-48.png"
-              width="20"
-              height="20"
-              class="margin-s"
-            />
-            <p>Authentication key</p>
-          </div>
-          <img src="./images/icon-copy-24.png" width="15" height="15" />
-        </div>
-        <div class="flex-row justify-between align-center full-width">
-          <div class="flex-row align-center">
-            <img
-              src="/images/icon-cookies-48.png"
-              width="20"
-              height="20"
-              class="margin-s"
-            />
-            <p>Cookie key</p>
-          </div>
-          <img src="./images/icon-copy-24.png" width="15" height="15" />
-        </div>
       </div>
     </section>
     <footer>
@@ -93,6 +69,8 @@
         />
       </div>
     </footer>
-    <script src="app.js"></script>
+    <script src="manager.js"></script>
+    <script src="items.js"></script>
+    <script src="popup.js"></script>
   </body>
 </html>
