add font awesome support

--- a/popup.html
+++ b/popup.html
@@ -40,7 +40,11 @@
       .margin-s {
         margin: 0.3em;
       }
+      .sponsor {
+        font-size: 0.6em;
+      }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <header>
@@ -68,6 +72,8 @@
           class="margin-s"
         />
       </div>
+      <i class="fa-solid fa-house"></i>
+<a href="https://www.flaticon.com/free-icons/golden-retriever" title="golden retriever icons" class="sponsor">app icon made by Chanut-is-Industries - Flaticon</a>
     </footer>
     <script src="manager.js"></script>
     <script src="items.js"></script>
