feat: add delete keys feature

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
       html {
         min-height: 5em;
         min-width: 12em;
+        font-size: 20px;
       }
       header {
         padding: 0.4em;
@@ -174,6 +175,18 @@
             Save
           </div>
         </button>
+      </div>
+      <div
+        id="deleteKeysFooter"
+        class="flex-row justify-end full-width align-center display-none"
+      >
+        <img
+          id="confirmDeleteBtn"
+          src="./images/icon-check-30.png"
+          width="20"
+          height="20"
+          class="margin-xs cursor-pointer"
+        />
       </div>
     </footer>
     <script src="manager.js"></script>
