refactor manager reads

--- a/popup.html
+++ b/popup.html
@@ -192,6 +192,8 @@
         </button>
       </div>
     </footer>
+    <script src="common.js"></script>
+    <script src="keyReader.js"></script>
     <script src="manager.js"></script>
     <script src="items.js"></script>
     <script src="popup.js"></script>
