add session item

--- a/popup.html
+++ b/popup.html
@@ -119,16 +119,16 @@
                 <input
                   class="form-check-input"
                   type="radio"
-                  name="session"
+                  name="storage"
                   id="sessionStorage"
                   value="session"
                 />
-                <label class="form-check-label" for="sessionStorage">
+                <label class="form-check-label" for="localStorage">
                   <i
                     class="fa-sharp fa-regular fa-folder-open"
                     style="color: #ffaa3b"
                   ></i>
-                  Session storage
+                  Local storage
                 </label>
               </div>
               <div class="form-check" style="margin-right: 10px">
@@ -138,7 +138,6 @@
                   name="storage"
                   id="localStorage"
                   value="local"
-                  checked
                 />
                 <label class="form-check-label" for="localStorage">
                   <i
