add setter for keys

--- a/popup.html
+++ b/popup.html
@@ -246,6 +246,7 @@
     </footer>
     <script src="common.js"></script>
     <script src="keyReader.js"></script>
+    <script src="keyWriter.js"></script>
     <script src="manager.js"></script>
     <script src="items.js"></script>
     <script src="popup.js"></script>
