--- a/src/popup.html
+++ b/src/popup.html
@@ -93,6 +93,7 @@
   </style>
   <link href="./assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./assets/font-awesome/font-awesome.css" />
+  <meta charset="utf-8" />
 </head>
 
 <body>
