feat: refactor popup view

--- a/src/popup.html
+++ b/src/popup.html
@@ -146,11 +146,6 @@
   </section>
   <footer style="margin-top: 10px">
     <div id="keyListFooter" class="flex-row justify-end full-width align-center">
-      <button id="deleteKeysBtn" type="button" class="btn btn-outline-danger" style="margin-right: 10px">
-        <span class="btn-label">
-          <i class="fa-solid fa-trash-can fa-sm"></i></span>
-      </button>
-
       <button id="addKeyBtn" type="button" class="btn btn-outline-success">
         <span class="btn-label">
           <i class="fa-solid fa-circle-plus fa-lg" style="margin-right: 10px"></i></span>
@@ -165,15 +160,6 @@
         <i class="fa-solid fa-floppy-disk" style="margin-right: 10px"></i>Save
       </button>
     </div>
-    <div id="deleteKeysFooter" class="flex-row justify-end full-width align-center display-none">
-      <button id="cancelDeleteKeyBtn" type="button" class="btn" style="margin-right: 5px">
-        <i class="fa-solid fa-circle-arrow-left fa-lg" style="color: #495057"></i>
-      </button>
-      <button id="confirmDeleteBtn" type="button" class="btn btn-outline-danger">
-        <i class="fa-solid fa-trash-can" style="margin-right: 10px"></i>Delete
-        keys
-      </button>
-    </div>
   </footer>
   <script src="common.js"></script>
 
@@ -185,6 +171,7 @@
 
   <script src="manager.js"></script>
   <script src="items.js"></script>
+  <script src="page.js"></script>
   <script src="popup.js"></script>
   <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
