feat: fix missing display-none

--- a/src/popup.html
+++ b/src/popup.html
@@ -16,7 +16,7 @@
       </div>
     </header>
     <section class="mt-1">
-      <div id="emptyPage" class="flex flex-col align-items-center my-3">
+      <div id="emptyPage" class="flex flex-col align-items-center my-3 display-none">
         <em style="color: var(--medium-gray)"
           >Key retriever is waiting for your new keys</em
         >
