--- a/src/popup.html
+++ b/src/popup.html
@@ -15,7 +15,7 @@
         <h4>Key Retriever</h4>
       </div>
     </header>
-    <section class="mt-1">
+    <section class="mt-1" style="min-height: 5em">
       <div id="emptyPage" class="flex flex-col align-items-center my-3 display-none">
         <em style="color: var(--medium-gray)"
           >Key retriever is waiting for your new keys</em
