--- a/src/popup.html
+++ b/src/popup.html
@@ -86,7 +86,7 @@
                 />
                 <label class="btn btn-outline-primary" for="cookies">
                   <i
-                    class="fa-solid fa-cookie fa-lg"
+                    class="fa-solid fa-cookie-bite fa-lg"
                     style="color: var(--yellow)"
                   ></i>
                   Cookies
