--- a/src/popup.html
+++ b/src/popup.html
@@ -94,6 +94,30 @@
               </div>
             </div>
           </div>
+          <div class="form-floating mb-3">
+            <input
+              id="alias"
+              type="text"
+              class="form-control"
+              name="alias"
+              required
+            />
+            <label for="alias" class="form-label">Alias</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input
+              id="key"
+              type="text"
+              class="form-control"
+              name="key"
+              required
+            />
+            <label for="key" class="form-label">Key</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input id="subKey" type="text" class="form-control" name="subKey" />
+            <label for="subKey" class="form-label">Sub-key</label>
+          </div>
         </form>
       </div>
     </section>
