--- a/src/popup.html
+++ b/src/popup.html
@@ -9,12 +9,26 @@
 
   <body>
     <header>
-      <div class="flex flex-row align-items-center display-none">
+      <div class="flex flex-row align-items-center">
         <img src="../images/icon48.png" width="48" height="48" class="me-3" />
         <h4>Key Retriever</h4>
       </div>
     </header>
     <section class="mt-1">
+      <div
+        id="emptyPage"
+        class="flex flex-col align-items-center my-3 display-none"
+      >
+        <img
+          class="mb-4"
+          src="../images/empty-page.jpg"
+          width="200"
+          height="75"
+        />
+        <em style="color: var(--medium-gray)"
+          >Key retriever is waiting for your new keys</em
+        >
+      </div>
       <ul id="keyList" class="list-group list-group-flush"></ul>
       <div id="addKeyForm" class="display-none">
         <form id="add-key-form" novalidate>
