--- a/src/popup.html
+++ b/src/popup.html
@@ -9,17 +9,31 @@
 
   <body>
     <header>
-      <div class="d-flex flex-row align-items-center">
+      <div class="flex flex-row align-items-center">
         <img src="../images/icon48.png" width="48" height="48" class="me-3" />
         <h4>Key Retriever</h4>
       </div>
     </header>
     <section class="mt-1">
+      <div
+        id="emptyPage"
+        class="flex flex-col align-items-center my-3 display-none"
+      >
+        <img
+          class="mb-4"
+          src="../images/empty-page.jpg"
+          width="200"
+          height="75"
+        />
+        <em style="color: var(--medium-gray)"
+          >Key retriever is waiting for your new keys</em
+        >
+      </div>
       <ul id="keyList" class="list-group list-group-flush"></ul>
       <div id="addKeyForm" class="display-none">
         <form id="add-key-form" novalidate>
           <div class="my-3">
-            <div class="d-flex flex-row">
+            <div class="flex flex-row">
               <div class="btn-group" role="group">
                 <input
                   class="btn-check"
@@ -112,7 +126,7 @@
     <footer class="mt-1">
       <div
         id="keyListFooter"
-        class="d-flex flex-row justify-content-end w-100 align-items-center"
+        class="flex flex-row justify-content-end w-100 align-items-center"
       >
         <button id="addKeyBtn" type="submit" class="btn btn-outline-success">
           <span class="btn-label">
@@ -123,7 +137,7 @@
       </div>
       <div
         id="addKeyFooter"
-        class="d-flex flex-row justify-content-end w-100 align-items-center display-none"
+        class="flex flex-row justify-content-end w-100 align-items-center display-none"
       >
         <button id="cancelAddKeyBtn" type="button" class="btn me-1">
           <i
